Fixed spacing in About section.

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -105,14 +105,14 @@ nav{
   /* main container for about me section */
   .about-me-cont{
     background-image: linear-gradient(45deg,orange, purple);
-    height: 180vh
+    height: 160vh
   }
 
   /* About subheading */
   .about-heading{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 5rem;
-    padding-top: 30rem;
+    padding-top: 20rem;
     padding-bottom: 12rem;
     color: white;
     letter-spacing: 4px;  
